--- a/pom.xml
+++ b/pom.xml
@@ -54,11 +54,14 @@
 
   <build>
     <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0-M5</version>
-      </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M5</version>
+            <configuration>
+                <groups>${groups}</groups>
+            </configuration>
+        </plugin>
     </plugins>
-  </build>
+</build>
 </project>
