--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,7 @@
             <version>3.0.0-M5</version>
             <configuration>
                 <groups>${groups}</groups>
+                <testFailureIgnore>false</testFailureIgnore>
             </configuration>
         </plugin>
     </plugins>
