--- a/.github/workflows/ui-tests.yml
+++ b/.github/workflows/ui-tests.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      CI: true
+      CI: 'true'   # string explícito, el validador deja de quejarse
 
     steps:
       - name: Checkout repository
@@ -25,6 +25,6 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: Run UI tests (TestNG group: ui)
+      - name: "Run UI tests (TestNG group: ui)"  # comillas porque tiene :
         run: mvn clean test -Dgroups=ui
 
