--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -24,3 +24,10 @@ jobs:
 
       - name: "Run API tests (TestNG group: api)"
         run: mvn clean test -Dgroups=api
+
+      - name: Upload Allure results (API)
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: allure-results-api
+          path: target/allure-results
