--- a/.github/workflows/ui-tests.yml
+++ b/.github/workflows/ui-tests.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      CI: 'true'   # string explícito, el validador deja de quejarse
+      CI: true´
 
     steps:
       - name: Checkout repository
@@ -25,6 +25,13 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: "Run UI tests (TestNG group: ui)"  # comillas porque tiene :
+      - name:  "Run UI tests (TestNG group: ui)"
         run: mvn clean test -Dgroups=ui
+
+      - name: Upload Allure results (UI)
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: allure-results-ui
+          path: target/allure-results
 
